updated of example notebooks

--- a/examples/tmp_testing_circular_loop_on_axis.ipynb
+++ b/examples/tmp_testing_circular_loop_on_axis.ipynb
@@ -23,8 +23,6 @@
     "lp = bs.Loop.circle(R, line=0.1)\n",
     "\n",
     "z = np.linspace(-5, 5, 1001)\n",
-    "r_obs = bs.Loop(z*0, z*0, z).xyz # bit of a hack for making an observation grid\n",
-    "\n",
     "r_obs = bs.ObsPoint(z=z).xyz"
    ]
   },
@@ -77,7 +75,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x22558b60100>]"
+       "[<matplotlib.lines.Line2D at 0x271228490d0>]"
       ]
      },
      "execution_count": 4,
